--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
   /* Start Main Colors */
 
   --bg: #111;
-  --c1: rgb(255, 64, 96);
-  --c2: rgb(253, 67, 145);
+  --c1: #ff4060;
+  --c2: #fd4391;
   --c3: #ff7e44;
 
   /* End Main Colors */
